--- a/index.html
+++ b/index.html
@@ -15,6 +15,28 @@
             <input name="cep" id="cep" type="text" />
             <p id="cep-error">Este CEP é inválido.</p>
         </div>
+        <div class="input-group">
+            <label for="logradouro">Logradouro</label>
+            <input name="logradouro" id="logradouro" type="text" />
+        </div>
+        <div class="input-group">
+            <label for="complemento">Complemento</label>
+            <input name="complemento" id="complemento" type="text" />
+        </div>
+        <div class="input-group">
+            <label for="bairro">Bairro</label>
+            <input name="bairro" id="bairro" type="text" />
+        </div>
+        <div class="input-group">
+            <label for="localidade">Localidade</label>
+            <input name="localidade" id="localidade" type="text" />
+        </div>
+        <div class="input-group">
+            <label for="uf">UF</label>
+            <input name="uf" id="uf" type="text" />
+        </div>
+        <div id="exibe-endereco"></div>
     </form>
+    <script src="./main.js"></script>
 </body>
 </html>
